--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #878787;
+  background-color: #FAFBFD;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,7 +18,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #19918F;
   text-decoration: inherit;
 }
 a:hover {
@@ -27,11 +27,9 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  
+  background-color: #FAFBFD;
 }
 
 h1 {
@@ -51,7 +49,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #432ae2;
 }
 button:focus,
 button:focus-visible {
