--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-<<<<<<< HEAD
 
-=======
->>>>>>> c449dd74f4b75dcf7302954c3ca734dbd4b05d6c
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -12,11 +9,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-<<<<<<< HEAD
   background-color: #fafbfd;
-=======
-  background-color: #FAFBFD;
->>>>>>> c449dd74f4b75dcf7302954c3ca734dbd4b05d6c
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,26 +17,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-<<<<<<< HEAD
 body {
   margin: 0;
   min-width: 320px;
-=======
-a {
-  font-weight: 500;
-  color: #19918F;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
-  background-color: #FAFBFD;
->>>>>>> c449dd74f4b75dcf7302954c3ca734dbd4b05d6c
 }
 
 h1 {
@@ -63,7 +39,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #432ae2;
+  border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
