--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #eceaea;
+  background-color: #fafbfd;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -19,7 +19,7 @@
 
 body {
   margin: 0;
-  min-width: 320px;
+  background-color: #FAFBFD;
 }
 
 h1 {
